# coding-harness

./: .architecture-baseline.txt  .architecture.yml  .coderabbit.yaml  .editorconfig  .gitattributes  .gitbook.yaml  .gitignore  .gitleaks.toml  .lychee.toml  .markdownlint-cli2.yaml  .memory-metrics.json  .mise.toml  .npmrc  .rgignore  .trufflehog-exclude.txt  .vale.ini  .versionrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODESTYLE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  FORJAMIE.md  GEMINI.md  Learning.md  Makefile  README.md  SECURITY.md  SUPPORT.md  UBIQUITOUS-MAP.md  UBIQUITOUS_LANGUAGE.md  WORKFLOW.md  biome.json  coding-policy.json  goal-governor-output.yaml  (+11 more)
.circleci/: config.yml  test-suites.yml
.codex/: preflight-allowed-external-paths.txt
.diagram/: agent.mmd  architecture.mmd  auth.mmd  c4context.mmd  class.mmd  database.mmd  dependency.mmd  erd.mmd  events.mmd  flow.mmd  manifest.json  rag.mmd  security.mmd  sequence.mmd  user.mmd
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  labels.yml
.greptile/: config.json  files.json  rules.md
.harness/: README.md  active-artifacts.md  artifact-provenance.json  ci-provider-transition-status.json  ci-required-checks.json  project-context-ref.json  restore-manifest.json  review-log.md  rule-lifecycle-manifest.json  upgrade-manifest.json
AI/: AGENTS.md
artifacts/: AGENTS.md
bash/: AGENTS.md
body/: AGENTS.md
codestyle/: 01-foundations.md  02-javascript-ui.md  03-rust-tauri.md  04-docs-config-and-release.md  07-python.md  09-web.md  (+16 more)
(+2887 files in other folders)
