[project]
name = "coding-harness-python-tools"
version = "0.0.0"
description = "Python validation tooling for coding-harness repository scripts."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.12,<3",
  "pyyaml>=6.0,<7",
]

[dependency-groups]
dev = [
  "pyright>=1.1.407",
  "pytest>=8.4,<9",
  "ruff>=0.14,<1",
  "types-PyYAML>=6.0,<7",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = [
  "scripts/check_artifact_type_contracts.py",
  "scripts/hook-governance/inventory_repos.py",
  "scripts/hook-governance/tests/test_inventory_repos.py",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "F", "SIM", "UP"]

[tool.pytest.ini_options]
testpaths = [
  "scripts/hook-governance/tests",
]
